--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=637
-dock_hsplit_3=-843
+dock_hsplit_3=-251
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/levels/level1.tscn", "res://scenes/player/player.tscn", "res://scenes/enemies/clanger/e_clanger.tscn", "res://scenes/levels/tileset scenes/chateau scene/chateau.tscn", "res://scenes/levels/test-area.tscn", "res://scenes/decorations/lightningLantern.tscn", "res://scenes/decorations/woodChair1.tscn")
-current_scene="res://scenes/decorations/woodChair1.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-selected_bottom_panel_item=0
+current_scene="res://scenes/levels/level1.tscn"
+center_split_offset=-288
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/player.gd", "res://scripts/playerCollision3D.gd"]
-selected_script="res://scripts/player.gd"
-open_help=[]
+open_scripts=["res://scenes/levels/HealthBar.gd", "res://scripts/player.gd", "res://scripts/playerCollision3D.gd"]
+selected_script="res://scenes/levels/HealthBar.gd"
+open_help=["Node"]
 script_split_offset=70
 list_split_offset=0
 
@@ -52,8 +52,8 @@ selected_shader=""
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
-log_filter_3=true
+log_filter_1=false
+log_filter_3=false
 log_filter_4=true
 collapse=false
 show_search=true
